// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UpdateWalletName > should render 1`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-[51] flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-theme-dark-950/80 dim:bg-theme-dim-950/80 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10 mt-[20%] md:mt-0"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dark:border-theme-dark-700 dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl dark:border"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              Address Name
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            <div
              class="text-theme-secondary-text pr-10 text-sm whitespace-pre-line md:pr-0 md:text-base"
            >
              Select a personalized address name, visible only to you
            </div>
            <form
              class="mt-4 space-y-6"
              data-testid="Form"
            >
              <fieldset
                class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
              >
                <label
                  class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex leading-[17px] font-semibold transition-colors duration-100 text-sm"
                  data-testid="FormLabel"
                  for="name"
                >
                  Address Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 dim:border-theme-dim-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="false"
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base!"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 modal-footer -mx-6 px-6 sm:border-t"
              >
                <div
                  class="[.modal-footer_&]:mt-4 [.modal-footer_&]:px-6 [.modal-footer_&]:sm:px-0 bg-theme-background dim:bg-theme-dim-950 dark:bg-theme-dark-950 border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 fixed inset-x-0 bottom-0 z-50 flex gap-3 border-t px-8 py-3 sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
                >
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 dark:text-theme-dark-50 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-900 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white"
                    data-testid="UpdateWalletName__cancel"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 dim:disabled:bg-theme-dim-700 dim:disabled:text-theme-secondary-600"
                    data-testid="UpdateWalletName__submit"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      Save
                    </div>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName > should show an error message for duplicate name 1`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-[51] flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-theme-dark-950/80 dim:bg-theme-dim-950/80 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10 mt-[20%] md:mt-0"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dark:border-theme-dark-700 dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl dark:border"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              Address Name
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            <div
              class="text-theme-secondary-text pr-10 text-sm whitespace-pre-line md:pr-0 md:text-base"
            >
              Select a personalized address name, visible only to you
            </div>
            <form
              class="mt-4 space-y-6"
              data-testid="Form"
            >
              <fieldset
                class="[&:focus-within_.FormLabel]:text-theme-danger-500 [&>.FormLabel]:text-theme-danger-500 flex min-w-0 flex-col"
              >
                <label
                  class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex leading-[17px] font-semibold transition-colors duration-100 text-sm"
                  data-testid="FormLabel"
                  for="name"
                >
                  Address Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base!"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                      />
                    </div>
                    <div
                      class="divide-theme-secondary-300 dark:divide-theme-secondary-800 dim:divide-theme-dim-700 flex items-center divide-x text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <div
                        class=""
                      >
                        <span
                          data-errortext="The name 'Mainsail Wallet 2' is already assigned to another wallet."
                          data-testid="Input__error"
                        >
                          <div
                            class="text-theme-danger-500"
                          >
                            <div
                              style="height: 20px; width: 20px;"
                            >
                              <svg
                                id="circle-exclamation-mark"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-width="2"
                                >
                                  <circle
                                    cx="10"
                                    cy="10"
                                    r="9"
                                    stroke-miterlimit="10"
                                  />
                                  <path
                                    d="M10 10.5v-5"
                                    stroke-linecap="round"
                                    stroke-miterlimit="10"
                                  />
                                  <path
                                    d="M10 14h0"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 modal-footer -mx-6 px-6 sm:border-t"
              >
                <div
                  class="[.modal-footer_&]:mt-4 [.modal-footer_&]:px-6 [.modal-footer_&]:sm:px-0 bg-theme-background dim:bg-theme-dim-950 dark:bg-theme-dark-950 border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 fixed inset-x-0 bottom-0 z-50 flex gap-3 border-t px-8 py-3 sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
                >
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 dark:text-theme-dark-50 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-900 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white"
                    data-testid="UpdateWalletName__cancel"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 dim:disabled:bg-theme-dim-700 dim:disabled:text-theme-secondary-600"
                    data-testid="UpdateWalletName__submit"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      Save
                    </div>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName > should show an error message for duplicate name 2`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-[51] flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-theme-dark-950/80 dim:bg-theme-dim-950/80 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10 mt-[20%] md:mt-0"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dark:border-theme-dark-700 dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl dark:border"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              Address Name
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            <div
              class="text-theme-secondary-text pr-10 text-sm whitespace-pre-line md:pr-0 md:text-base"
            >
              Select a personalized address name, visible only to you
            </div>
            <form
              class="mt-4 space-y-6"
              data-testid="Form"
            >
              <fieldset
                class="[&:focus-within_.FormLabel]:text-theme-danger-500 [&>.FormLabel]:text-theme-danger-500 flex min-w-0 flex-col"
              >
                <label
                  class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex leading-[17px] font-semibold transition-colors duration-100 text-sm"
                  data-testid="FormLabel"
                  for="name"
                >
                  Address Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base!"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                      />
                    </div>
                    <div
                      class="divide-theme-secondary-300 dark:divide-theme-secondary-800 dim:divide-theme-dim-700 flex items-center divide-x text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <div
                        class=""
                      >
                        <span
                          data-errortext="The name 'mainsail wallet 2' is already assigned to another wallet."
                          data-testid="Input__error"
                        >
                          <div
                            class="text-theme-danger-500"
                          >
                            <div
                              style="height: 20px; width: 20px;"
                            >
                              <svg
                                id="circle-exclamation-mark"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-width="2"
                                >
                                  <circle
                                    cx="10"
                                    cy="10"
                                    r="9"
                                    stroke-miterlimit="10"
                                  />
                                  <path
                                    d="M10 10.5v-5"
                                    stroke-linecap="round"
                                    stroke-miterlimit="10"
                                  />
                                  <path
                                    d="M10 14h0"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 modal-footer -mx-6 px-6 sm:border-t"
              >
                <div
                  class="[.modal-footer_&]:mt-4 [.modal-footer_&]:px-6 [.modal-footer_&]:sm:px-0 bg-theme-background dim:bg-theme-dim-950 dark:bg-theme-dark-950 border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 fixed inset-x-0 bottom-0 z-50 flex gap-3 border-t px-8 py-3 sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
                >
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 dark:text-theme-dark-50 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-900 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white"
                    data-testid="UpdateWalletName__cancel"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 dim:disabled:bg-theme-dim-700 dim:disabled:text-theme-secondary-600"
                    data-testid="UpdateWalletName__submit"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      Save
                    </div>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName > should show an error message for duplicate name 3`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-[51] flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-theme-dark-950/80 dim:bg-theme-dim-950/80 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10 mt-[20%] md:mt-0"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dark:border-theme-dark-700 dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl dark:border"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              Address Name
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            <div
              class="text-theme-secondary-text pr-10 text-sm whitespace-pre-line md:pr-0 md:text-base"
            >
              Select a personalized address name, visible only to you
            </div>
            <form
              class="mt-4 space-y-6"
              data-testid="Form"
            >
              <fieldset
                class="[&:focus-within_.FormLabel]:text-theme-danger-500 [&>.FormLabel]:text-theme-danger-500 flex min-w-0 flex-col"
              >
                <label
                  class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex leading-[17px] font-semibold transition-colors duration-100 text-sm"
                  data-testid="FormLabel"
                  for="name"
                >
                  Address Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base!"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                      />
                    </div>
                    <div
                      class="divide-theme-secondary-300 dark:divide-theme-secondary-800 dim:divide-theme-dim-700 flex items-center divide-x text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <div
                        class=""
                      >
                        <span
                          data-errortext="The name 'Mainsail Wallet 2' is already assigned to another wallet."
                          data-testid="Input__error"
                        >
                          <div
                            class="text-theme-danger-500"
                          >
                            <div
                              style="height: 20px; width: 20px;"
                            >
                              <svg
                                id="circle-exclamation-mark"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-width="2"
                                >
                                  <circle
                                    cx="10"
                                    cy="10"
                                    r="9"
                                    stroke-miterlimit="10"
                                  />
                                  <path
                                    d="M10 10.5v-5"
                                    stroke-linecap="round"
                                    stroke-miterlimit="10"
                                  />
                                  <path
                                    d="M10 14h0"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 modal-footer -mx-6 px-6 sm:border-t"
              >
                <div
                  class="[.modal-footer_&]:mt-4 [.modal-footer_&]:px-6 [.modal-footer_&]:sm:px-0 bg-theme-background dim:bg-theme-dim-950 dark:bg-theme-dark-950 border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 fixed inset-x-0 bottom-0 z-50 flex gap-3 border-t px-8 py-3 sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
                >
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 dark:text-theme-dark-50 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-900 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white"
                    data-testid="UpdateWalletName__cancel"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 dim:disabled:bg-theme-dim-700 dim:disabled:text-theme-secondary-600"
                    data-testid="UpdateWalletName__submit"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      Save
                    </div>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName > should show an error message for duplicate name 4`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-[51] flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-theme-dark-950/80 dim:bg-theme-dim-950/80 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10 mt-[20%] md:mt-0"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dark:border-theme-dark-700 dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl dark:border"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              Address Name
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            <div
              class="text-theme-secondary-text pr-10 text-sm whitespace-pre-line md:pr-0 md:text-base"
            >
              Select a personalized address name, visible only to you
            </div>
            <form
              class="mt-4 space-y-6"
              data-testid="Form"
            >
              <fieldset
                class="[&:focus-within_.FormLabel]:text-theme-danger-500 [&>.FormLabel]:text-theme-danger-500 flex min-w-0 flex-col"
              >
                <label
                  class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex leading-[17px] font-semibold transition-colors duration-100 text-sm"
                  data-testid="FormLabel"
                  for="name"
                >
                  Address Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base!"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                      />
                    </div>
                    <div
                      class="divide-theme-secondary-300 dark:divide-theme-secondary-800 dim:divide-theme-dim-700 flex items-center divide-x text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <div
                        class=""
                      >
                        <span
                          data-errortext="The name 'Mainsail Wallet 2' is already assigned to another wallet."
                          data-testid="Input__error"
                        >
                          <div
                            class="text-theme-danger-500"
                          >
                            <div
                              style="height: 20px; width: 20px;"
                            >
                              <svg
                                id="circle-exclamation-mark"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-width="2"
                                >
                                  <circle
                                    cx="10"
                                    cy="10"
                                    r="9"
                                    stroke-miterlimit="10"
                                  />
                                  <path
                                    d="M10 10.5v-5"
                                    stroke-linecap="round"
                                    stroke-miterlimit="10"
                                  />
                                  <path
                                    d="M10 14h0"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 modal-footer -mx-6 px-6 sm:border-t"
              >
                <div
                  class="[.modal-footer_&]:mt-4 [.modal-footer_&]:px-6 [.modal-footer_&]:sm:px-0 bg-theme-background dim:bg-theme-dim-950 dark:bg-theme-dark-950 border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 fixed inset-x-0 bottom-0 z-50 flex gap-3 border-t px-8 py-3 sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
                >
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 dark:text-theme-dark-50 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-900 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white"
                    data-testid="UpdateWalletName__cancel"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 dim:disabled:bg-theme-dim-700 dim:disabled:text-theme-secondary-600"
                    data-testid="UpdateWalletName__submit"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      Save
                    </div>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName > should show error message when name consists only of whitespace 1`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-[51] flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-theme-dark-950/80 dim:bg-theme-dim-950/80 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10 mt-[20%] md:mt-0"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dark:border-theme-dark-700 dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl dark:border"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              Address Name
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            <div
              class="text-theme-secondary-text pr-10 text-sm whitespace-pre-line md:pr-0 md:text-base"
            >
              Select a personalized address name, visible only to you
            </div>
            <form
              class="mt-4 space-y-6"
              data-testid="Form"
            >
              <fieldset
                class="[&:focus-within_.FormLabel]:text-theme-danger-500 [&>.FormLabel]:text-theme-danger-500 flex min-w-0 flex-col"
              >
                <label
                  class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex leading-[17px] font-semibold transition-colors duration-100 text-sm"
                  data-testid="FormLabel"
                  for="name"
                >
                  Address Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base!"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                      />
                    </div>
                    <div
                      class="divide-theme-secondary-300 dark:divide-theme-secondary-800 dim:divide-theme-dim-700 flex items-center divide-x text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <div
                        class=""
                      >
                        <span
                          data-errortext="WALLETS.VALIDATION.ALIAS_REQUIRED"
                          data-testid="Input__error"
                        >
                          <div
                            class="text-theme-danger-500"
                          >
                            <div
                              style="height: 20px; width: 20px;"
                            >
                              <svg
                                id="circle-exclamation-mark"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-width="2"
                                >
                                  <circle
                                    cx="10"
                                    cy="10"
                                    r="9"
                                    stroke-miterlimit="10"
                                  />
                                  <path
                                    d="M10 10.5v-5"
                                    stroke-linecap="round"
                                    stroke-miterlimit="10"
                                  />
                                  <path
                                    d="M10 14h0"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 modal-footer -mx-6 px-6 sm:border-t"
              >
                <div
                  class="[.modal-footer_&]:mt-4 [.modal-footer_&]:px-6 [.modal-footer_&]:sm:px-0 bg-theme-background dim:bg-theme-dim-950 dark:bg-theme-dark-950 border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 fixed inset-x-0 bottom-0 z-50 flex gap-3 border-t px-8 py-3 sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
                >
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 dark:text-theme-dark-50 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-900 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white"
                    data-testid="UpdateWalletName__cancel"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 dim:disabled:bg-theme-dim-700 dim:disabled:text-theme-secondary-600"
                    data-testid="UpdateWalletName__submit"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      Save
                    </div>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName > should show error message when name exceeds 42 characters 1`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-[51] flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-theme-dark-950/80 dim:bg-theme-dim-950/80 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10 mt-[20%] md:mt-0"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dark:border-theme-dark-700 dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl dark:border"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              Address Name
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            <div
              class="text-theme-secondary-text pr-10 text-sm whitespace-pre-line md:pr-0 md:text-base"
            >
              Select a personalized address name, visible only to you
            </div>
            <form
              class="mt-4 space-y-6"
              data-testid="Form"
            >
              <fieldset
                class="[&:focus-within_.FormLabel]:text-theme-danger-500 [&>.FormLabel]:text-theme-danger-500 flex min-w-0 flex-col"
              >
                <label
                  class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex leading-[17px] font-semibold transition-colors duration-100 text-sm"
                  data-testid="FormLabel"
                  for="name"
                >
                  Address Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base!"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                      />
                    </div>
                    <div
                      class="divide-theme-secondary-300 dark:divide-theme-secondary-800 dim:divide-theme-dim-700 flex items-center divide-x text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <div
                        class=""
                      >
                        <span
                          data-errortext="Address Name should have at most 42 characters."
                          data-testid="Input__error"
                        >
                          <div
                            class="text-theme-danger-500"
                          >
                            <div
                              style="height: 20px; width: 20px;"
                            >
                              <svg
                                id="circle-exclamation-mark"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-width="2"
                                >
                                  <circle
                                    cx="10"
                                    cy="10"
                                    r="9"
                                    stroke-miterlimit="10"
                                  />
                                  <path
                                    d="M10 10.5v-5"
                                    stroke-linecap="round"
                                    stroke-miterlimit="10"
                                  />
                                  <path
                                    d="M10 14h0"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 modal-footer -mx-6 px-6 sm:border-t"
              >
                <div
                  class="[.modal-footer_&]:mt-4 [.modal-footer_&]:px-6 [.modal-footer_&]:sm:px-0 bg-theme-background dim:bg-theme-dim-950 dark:bg-theme-dark-950 border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 fixed inset-x-0 bottom-0 z-50 flex gap-3 border-t px-8 py-3 sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
                >
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 dark:text-theme-dark-50 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-900 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white"
                    data-testid="UpdateWalletName__cancel"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 dim:disabled:bg-theme-dim-700 dim:disabled:text-theme-secondary-600"
                    data-testid="UpdateWalletName__submit"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      Save
                    </div>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
